--- a/netflix1.html
+++ b/netflix1.html
@@ -7,7 +7,7 @@
     <title>Netflix</title>
     
     <link rel="stylesheet" href="Netflix-Home-Page/css.css">
-    <link rel="stylesheet" href="mediaquery.css">
+    <link rel="stylesheet" href="Netflix-Home-Page/css.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <script src="https://kit.fontawesome.com/bc3a1796c2.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/870/870910.ico'/> 
